--- a/resources.html
+++ b/resources.html
@@ -57,22 +57,22 @@
                     <div class="whitepaper-card fade-on-scroll">
                         <h3 class="whitepaper-title">Structured Products 101</h3>
                         <p class="whitepaper-description">A sophisticated introduction to structured products, covering fundamental concepts, building blocks, and institutional implementation frameworks. We believe this is essential reading for advisors evaluating structured solutions. For hands-on exploration, try our <a href="/institutional/simulator.html" style="color: #C8A678; text-decoration: underline;">portfolio simulator</a>.</p>
-                        <a href="#" class="whitepaper-link">Download PDF</a>
+                        <a href="#" class="whitepaper-link">PDF Coming Soon</a>
                     </div>
                     <div class="whitepaper-card fade-on-scroll delay-1">
                         <h3 class="whitepaper-title">The Role of Bespoke ETFs</h3>
                         <p class="whitepaper-description">An analysis of how bespoke exchange-traded funds integrate with structured product strategies, providing scalable access and operational efficiency for advisory practices.</p>
-                        <a href="#" class="whitepaper-link">Download PDF</a>
+                        <a href="#" class="whitepaper-link">PDF Coming Soon</a>
                     </div>
                     <div class="whitepaper-card fade-on-scroll delay-2">
                         <h3 class="whitepaper-title">Partnering with First Principle</h3>
                         <p class="whitepaper-description">A guide to integrating First Principle's structured solutions into your advisory practice, covering implementation workflows, compliance considerations, and best practices for client communication.</p>
-                        <a href="#" class="whitepaper-link">Download PDF</a>
+                        <a href="#" class="whitepaper-link">PDF Coming Soon</a>
                     </div>
                     <div class="whitepaper-card fade-on-scroll delay-3">
                         <h3 class="whitepaper-title">Volatility in the Modern Economy</h3>
                         <p class="whitepaper-description">An examination of volatility dynamics and how structured products can be used to manage portfolio risk, enhance returns, and provide downside protection in uncertain market environments.</p>
-                        <a href="#" class="whitepaper-link">Download PDF</a>
+                        <a href="#" class="whitepaper-link">PDF Coming Soon</a>
                     </div>
                 </div>
             </div>
