Added Portfolio Challenge

--- a/institutional/index.html
+++ b/institutional/index.html
@@ -306,9 +306,7 @@
             <div class="container">
                 <h2 class="section-header">The Regime Shift</h2>
                 <p class="section-subheader">
-                    Capital market assumptions have shifted materially. Forward equity returns are lower, volatility is structurally
-                    higher, and traditional diversification is less reliable. We believe that the portfolio construction playbook that worked in the
-                    Quantitative Easing era requires recalibration for today&#8217;s and tomorrow&#8217;s regime. Explore our <a href="/about.html" style="color: #C8A678; text-decoration: underline;">institutional expertise</a> and learn how we apply systematic frameworks to portfolio enhancement.
+                    Capital market assumptions have shifted materially. Forward equity returns are lower, volatility is structurally higher, and traditional diversification is less reliable. We believe the portfolio construction playbook that worked in the Quantitative Easing era requires recalibration for today&#8217;s and tomorrow&#8217;s regime. Explore our institutional expertise and learn how we apply systematic frameworks to portfolio enhancement.
                 </p>
 
                 <div class="regime-timeline">
