--- a/institutional/simulator.html
+++ b/institutional/simulator.html
@@ -1105,7 +1105,7 @@
                                     size: 11,
                                     weight: 300
                                 },
-                                color: '#B0B0B0'
+                                color: '#D0D0D0'
                             },
                             grid: {
                                 display: false
@@ -1115,7 +1115,7 @@
                                     size: 10,
                                     weight: 300
                                 },
-                                color: '#888',
+                                color: '#E0E0E0',
                                 stepSize: 1
                             },
                             min: 0,
@@ -1139,7 +1139,7 @@
                                     size: 10,
                                     weight: 300
                                 },
-                                color: '#888',
+                                color: '#E0E0E0',
                                 stepSize: 5000000, // Even spacing every $5M
                                 callback: function(value) {
                                     return formatDollarsCompact(value);
