--- a/resources.html
+++ b/resources.html
@@ -55,21 +55,26 @@
                 <p class="resources-subtitle fade-on-scroll delay-1">Analytical frameworks and implementation guidance for structured SMA solutions. Our resources aim to provide the technical depth and institutional perspective required to understand and deploy structured products within an advisory practice. Learn more about our <a href="/institutional/product.html" style="color: #C8A678; text-decoration: underline;">structured note strategy</a> and explore our <a href="/about.html" style="color: #C8A678; text-decoration: underline;">institutional expertise</a>.</p>
                 <div class="whitepapers-grid">
                     <div class="whitepaper-card fade-on-scroll">
+                        <h3 class="whitepaper-title">Portfolio Challenge</h3>
+                        <p class="whitepaper-description">Experience the difficulty of manually building portfolios across market regimes. This interactive challenge demonstrates why systematic, outcome-engineered approaches outperform manual allocation decisions. Build a portfolio in 90 seconds and survive three market regimes to see how First Principle's systematic approach compares to manual decision-making.</p>
+                        <a href="/portfolio-challenge" class="whitepaper-link">Start the Challenge →</a>
+                    </div>
+                    <div class="whitepaper-card fade-on-scroll delay-1">
                         <h3 class="whitepaper-title">Structured Products 101</h3>
                         <p class="whitepaper-description">A sophisticated introduction to structured products, covering fundamental concepts, building blocks, and institutional implementation frameworks. We believe this is essential reading for advisors evaluating structured solutions. For hands-on exploration, try our <a href="/institutional/simulator.html" style="color: #C8A678; text-decoration: underline;">portfolio simulator</a>.</p>
                         <a href="#" class="whitepaper-link">PDF Coming Soon</a>
                     </div>
-                    <div class="whitepaper-card fade-on-scroll delay-1">
+                    <div class="whitepaper-card fade-on-scroll delay-2">
                         <h3 class="whitepaper-title">The Role of Bespoke ETFs</h3>
                         <p class="whitepaper-description">An analysis of how bespoke exchange-traded funds integrate with structured product strategies, providing scalable access and operational efficiency for advisory practices.</p>
                         <a href="#" class="whitepaper-link">PDF Coming Soon</a>
                     </div>
-                    <div class="whitepaper-card fade-on-scroll delay-2">
+                    <div class="whitepaper-card fade-on-scroll delay-3">
                         <h3 class="whitepaper-title">Partnering with First Principle</h3>
                         <p class="whitepaper-description">A guide to integrating First Principle's structured solutions into your advisory practice, covering implementation workflows, compliance considerations, and best practices for client communication.</p>
                         <a href="#" class="whitepaper-link">PDF Coming Soon</a>
                     </div>
-                    <div class="whitepaper-card fade-on-scroll delay-3">
+                    <div class="whitepaper-card fade-on-scroll delay-4">
                         <h3 class="whitepaper-title">Volatility in the Modern Economy</h3>
                         <p class="whitepaper-description">An examination of volatility dynamics and how structured products can be used to manage portfolio risk, enhance returns, and provide downside protection in uncertain market environments.</p>
                         <a href="#" class="whitepaper-link">PDF Coming Soon</a>
