--- a/retail/simulator.html
+++ b/retail/simulator.html
@@ -541,7 +541,7 @@
                                     size: 11,
                                     weight: 300
                                 },
-                                color: '#B0B0B0'
+                                color: '#D0D0D0'
                             },
                             grid: {
                                 display: false
@@ -551,7 +551,7 @@
                                     size: 10,
                                     weight: 300
                                 },
-                                color: '#888',
+                                color: '#E0E0E0',
                                 stepSize: 1
                             },
                             min: 0,
@@ -575,7 +575,7 @@
                                     size: 10,
                                     weight: 300
                                 },
-                                color: '#888',
+                                color: '#E0E0E0',
                                 stepSize: 5000000, // Even spacing every $5M
                                 callback: function(value) {
                                     return formatCurrency(value);
