Market Environment and PC edits

--- a/institutional/index.html
+++ b/institutional/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpeg" href="../Logo.jpg">
-    <meta name="description" content="Institutional structured products designed to convert equity volatility into stable income. Portfolio enhancement for a new market regime.">
+    <meta name="description" content="Institutional structured products designed to convert equity volatility into stable income. Portfolio enhancement for a new market environment.">
     <title>Institutional Structured Products | First Principle</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -286,11 +286,11 @@
                 <div class="hero-content-new">
                     <div class="hero-text-new">
                         <h1 class="hero-title-new" style="font-size: 3.5rem; line-height: 1.2; margin-bottom: 1.5rem;">
-                            Portfolio Enhancement<br>
-                            for a New Market Regime
+                            Portfolio Enhancement for<br>
+                            a New Market Environment
                         </h1>
                         <p class="hero-subheader-new" style="font-size: 1.2rem; max-width: 800px; margin: 0 auto 2.5rem;">
-                            First Principle, powered by The Invictus Collective, designs structured-note portfolios that convert equity volatility into systematic, stable income and asymmetric payoff profiles. We believe our approach is suited for today&#8217;s volatility and correlation regime, and is engineered to integrate into existing equity and credit allocations&#8212;not replace them.
+                            First Principle, powered by The Invictus Collective, designs structured-note portfolios that convert equity volatility into systematic, stable income and asymmetric payoff profiles. We believe our approach is suited for today&#8217;s volatility and correlation environment, and is engineered to integrate into existing equity and credit allocations&#8212;not replace them.
                         </p>
                         <div class="hero-buttons-new">
                             <a href="/institutional/product.html" class="btn btn-primary">Explore the Strategy</a>
@@ -301,12 +301,12 @@
             </div>
         </section>
 
-        <!-- REGIME SHIFT SECTION -->
+        <!-- MARKET ENVIRONMENT SHIFT SECTION -->
         <section class="section dark-bg regime-section">
             <div class="container">
-                <h2 class="section-header">The Regime Shift</h2>
+                <h2 class="section-header">The Market Environment Shift</h2>
                 <p class="section-subheader">
-                    Capital market assumptions have shifted materially. Forward equity returns are lower, volatility is structurally higher, and traditional diversification is less reliable. We believe the portfolio construction playbook that worked in the Quantitative Easing era requires recalibration for today&#8217;s and tomorrow&#8217;s regime. Explore our institutional expertise and learn how we apply systematic frameworks to portfolio enhancement.
+                    Capital market assumptions have shifted materially. Forward equity returns are lower, volatility is structurally higher, and traditional diversification is less reliable. We believe the portfolio construction playbook that worked in the Quantitative Easing era requires recalibration for today&#8217;s and tomorrow&#8217;s market environment. Explore our institutional expertise and learn how we apply systematic frameworks to portfolio enhancement.
                 </p>
 
                 <div class="regime-timeline">
@@ -319,7 +319,7 @@
 
                     <div class="regime-comparison">
                         <div class="regime-period">
-                            <h4>2010–2019: QE-Dominated Regime</h4>
+                            <h4>2010–2019: QE-Dominated Environment</h4>
                             <div class="regime-metrics">
                                 <div class="regime-metric">
                                     <span class="regime-metric-label">Forward Equity Returns</span>
@@ -344,7 +344,7 @@
                         </div>
 
                         <div class="regime-period regime-period--current">
-                            <h4>2020–2025: Elevated Volatility Regime</h4>
+                            <h4>2020–2025: Elevated Volatility Environment</h4>
                             <div class="regime-metrics">
                                 <div class="regime-metric">
                                     <span class="regime-metric-label">Forward Equity Returns</span>
